Add Syncfusion components and update styles
- Integrated Syncfusion components including AppBar and TreeView into the application.
- Updated angular.json to include Syncfusion styles.
- Registered Syncfusion license in main.ts.
- Enhanced HeaderComponent and ShellComponent with new templates and styles.
- Implemented TodoComponent with hierarchical and list data using TreeView.
- Added global styles for better layout and responsiveness.

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<div class="col-lg-12 default-appbar-section">
+    <div class="default-appbar-container">
+        <div class="row">
+            <div class="col-md-12">
+                <ejs-appbar colorMode="Primary">
+                    <span class="regular">Quantellia</span>
+                    <div class="e-appbar-spacer"></div>
+                    <button
+                        ejs-button
+                        cssClass="e-inherit login"
+                        [routerLink]="['/login']"
+                    >
+                        Login
+                    </button>
+                </ejs-appbar>
+            </div>
+        </div>
+    </div>
+</div>
