--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,1 +1,14 @@
-<p>todo works!</p>
+<div class="col-lg-12">
+    <div class="col-lg-6 nested-data">
+        <div class="content">
+            <p class="displayText">Hierarchical Data</p>
+            <ejs-treeview id="tree" [fields]="fields"></ejs-treeview>
+        </div>
+    </div>
+    <div class="col-lg-6 list-data">
+        <div class="content">
+            <p class="displayText">List Data</p>
+            <ejs-treeview id="listtree" [fields]="listfields"></ejs-treeview>
+        </div>
+    </div>
+</div>
