--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,14 +1,23 @@
-<div class="col-lg-12">
-    <div class="col-lg-6 nested-data">
-        <div class="content">
-            <p class="displayText">Hierarchical Data</p>
-            <ejs-treeview id="tree" [fields]="fields"></ejs-treeview>
-        </div>
-    </div>
-    <div class="col-lg-6 list-data">
-        <div class="content">
-            <p class="displayText">List Data</p>
-            <ejs-treeview id="listtree" [fields]="listfields"></ejs-treeview>
-        </div>
+<div class="todo-container">
+    <app-todo-add></app-todo-add>
+
+    <div class="todo-list">
+        <ng-container *ngIf="todos$ | async as todos">
+            <div *ngIf="todos.length === 0" class="no-todos">
+                <p>No tasks yet. Add your first task to get started!</p>
+            </div>
+            <div
+                *ngFor="let todo of todos"
+                class="todo-item"
+                [class.completed]="todo.completed"
+            >
+                <ejs-checkbox
+                    [checked]="todo.completed"
+                    (change)="toggleTodo(todo)"
+                >
+                </ejs-checkbox>
+                <span class="description">{{ todo.description }}</span>
+            </div>
+        </ng-container>
     </div>
 </div>
